# quarto-demo

./: .gitignore  README.md  penguins.csv  penguins_synthetic.csv  pyproject.toml  report.qmd  syn.ipynb
