[project]
name = "quarto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "scikit-learn>=1.6.1",
    "sdv>=1.17.4",
    "seaborn>=0.13.2",
]
